feat: 增加多模块打包功能和全部页面的升级

--- a/oes-core/src/main/resources/templates/admin/academy/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/academy/save-modal.html
@@ -3,13 +3,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">增加学院</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">增加学院</h4>
             </div>
             <div class="modal-body">
-                <form class="save-form">
+                <form id="save-form">
                     <div class="form-group form_datetime">
                         <label for="sname">学院名称</label>
                         <input type="text" name="name" class="form-control"
