--- a/oes-core/src/main/resources/templates/admin/academy/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/academy/update-modal.html
@@ -2,12 +2,12 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">修改学院信息</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">修改学院信息</h4>
             </div>
-            <form class="update-form">
+            <form id="update-form">
                 <div class="modal-body">
                     <div class="form-group form_datetime">
                         <label for="id">ID</label>
@@ -23,7 +23,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="updateBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="updateAcademy()">确定</button>
             </div>
         </div>
     </div>
