--- a/oes-core/src/main/resources/templates/admin/announce/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/announce/save-modal.html
@@ -3,12 +3,12 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">更新公告</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">更新公告</h4>
             </div>
-            <form class="save-form">
+            <form id="save-form">
                 <div class="modal-body">
                     <div class="form-group form_datetime">
                         <label>公告标题</label>
@@ -31,7 +31,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="saveBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="saveAnnounce()">确定</button>
             </div>
         </div>
     </div>
