--- a/oes-core/src/main/resources/templates/admin/teacher/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/update-modal.html
@@ -2,10 +2,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">修改教师信息</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">修改教师信息</h4>
             </div>
             <form class="update-form">
                 <div class="modal-body">
@@ -44,7 +44,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="updateBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="updateTeacher()">确定</button>
             </div>
         </div>
     </div>
