--- a/oes-core/src/main/resources/templates/admin/academy/list.html
+++ b/oes-core/src/main/resources/templates/admin/academy/list.html
@@ -34,47 +34,70 @@
     <% layout("../include/sider.html",{name:'academy'}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">学院管理</h3>
-                    <div class="box-tools pull-right">
-                        <a class="goSave btn btn-success btn-sm"><i class="fa fa-plus"></i> 新增学院</a>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>学院管理</h1>
                     </div>
                 </div>
-                <div class="box-body no-padding">
-                    <table class="table table-hover">
-                        <tbody>
-                        <tr>
-                            <th style="width: 20%">编号</th>
-                            <th style="width: 40%">学院名称</th>
-                            <th style="width: 40%">操作</th>
-                        </tr>
-                        <% if(isEmpty(academyList)){ %>
-                        <tr>
-                            <td colspan="6">没有学院</td>
-                        </tr>
-                        <% } %>
-                        <% for( academy in academyList){ %>
-                        <tr class="rowDetail" rel="${academy.id}">
-                            <td>${academyLP.index}</td>
-                            <td hidden="hidden">${academy.id}</td>
-                            <td>${academy.name}</td>
-                            <td>
-                                <button class="btn btn-success btn-sm goUpdate" onclick="getAcademy(${academy.id})"><i
-                                        class="fa"></i>编辑
-                                </button>
-                                <button class="btn btn-sm btn-danger" onclick="deleteAcademy(${academy.id}) "><i
-                                        class="fa"></i>删除
-                                </button>
-                            </td>
-                        </tr>
-                        <% } %>
-                        </tbody>
-                    </table>
-                </div>
             </div>
-            <ul id="pagination-demo" class="pagination-sm pull-right"></ul>
+        </section>
+
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">公告信息</h3>
+                                <div class="card-tools">
+                                    <div class="input-group input-group-sm">
+                                        <button class="btn btn-success btn-sm" onclick="goSave()"><i class="fa fa-plus"></i> 新增学院</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body table-responsive p-0">
+                                <table class="table table-bordered table-striped table-head-fixed text-nowrap">
+                                    <tbody>
+                                    <tr>
+                                        <th style="width: 20%">编号</th>
+                                        <th style="width: 40%">学院名称</th>
+                                        <th style="width: 40%">操作</th>
+                                    </tr>
+                                    <% if(isEmpty(academyList)){ %>
+                                    <tr>
+                                        <td colspan="6">没有学院</td>
+                                    </tr>
+                                    <% } %>
+                                    <% for( academy in academyList){ %>
+                                    <tr class="rowDetail" rel="${academy.id}">
+                                        <td>${academyLP.index}</td>
+                                        <td hidden="hidden">${academy.id}</td>
+                                        <td>${academy.name}</td>
+                                        <td>
+                                            <button class="btn btn-success btn-sm goUpdate"
+                                                    onclick="goUpdate(${academy.id})"><i
+                                                    class="fa"></i>编辑
+                                            </button>
+                                            <button class="btn btn-sm btn-danger"
+                                                    onclick="deleteAcademy(${academy.id}) "><i
+                                                    class="fa"></i>删除
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                </div>
+            </div><!-- /.row -->
         </section>
     </div>
     <!-- 增加模态框 -->
@@ -83,6 +106,8 @@
     <%include("update-modal.html"){} %>
     <!-- 引入全局 js 脚本文件 -->
     <% include("../../include/js.html"){} %>
+    <!-- 自定義工具 -->
+    <script src="/static/js/OesUtil.js"></script>
     <!-- 接口 -->
     <% include("api.html"){} %>
 </div>
