--- a/oes-core/src/main/resources/templates/admin/admin/api.html
+++ b/oes-core/src/main/resources/templates/admin/admin/api.html
@@ -2,47 +2,38 @@
 
     // 删除管理员
     function deleteAdmin(id) {
-        layer.confirm("确定删除管理员吗?", function () {
+        OesUtil.confirm("确定删除管理员吗?", function () {
             $.post("/api/admin/delete/" + id).done(function (data) {
                 if (data.state === "success") {
-                    layer.msg("删除成功!");
                     window.location.reload();
                 } else {
-                    layer.msg(data.message);
+                    toastr.error(data.message);
                 }
             })
         });
     }
 
     // 打开模态框
-    $(".goSave").click(function () {
+    function goSave() {
         $("#save-modal").modal({
             show: true,
             backdrop: 'static'
         });
-    });
+    }
 
     // 新增管理员
-    $('#saveBtn').click(function () {
-        let data = $('.save-form').serialize();
-        $.post("/api/admin/save", data).done(function (data) {
-            if (data.state === "success") {
-                layer.msg("增加成功!");
-                window.location.reload();
-            } else {
-                layer.msg(data.message);
-            }
+    function saveAdmin() {
+        OesUtil.confirm("确定新增管理员吗?", function () {
+            let data = $('#save-form').serialize();
+            $.post("/api/admin/save", data).done(function (data) {
+                if (data.state === "success") {
+                    layer.msg("增加成功!");
+                    window.location.reload();
+                } else {
+                    toastr.error(data.message);
+                }
+            })
         })
-    });
+    }
 
-    //分页
-    $('#pagination-demo').twbsPagination({
-        totalPages: "${page.pages}",
-        visiblePages: 5,
-        first: '首页',
-        last: '末页',
-        prev: '上一页',
-        next: '下一页',
-        href: "?p={{number}}"
-    });
 </script>
