--- a/oes-core/src/main/resources/templates/admin/admin/list.html
+++ b/oes-core/src/main/resources/templates/admin/admin/list.html
@@ -35,59 +35,97 @@
     <% layout("../include/sider.html",{name:'admin'}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">管理员管理</h3>
-                    <div class="box-tools pull-right">
-                        <a class="goSave btn btn-success btn-sm"><i class="fa fa-plus"></i> 新增管理员</a>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>管理员管理</h1>
                     </div>
                 </div>
-                <div class="box-body no-padding">
-                    <table class="table table-hover">
-                        <tbody>
-                        <tr>
-                            <th style="width: 15%">序号</th>
-                            <th style="width: 17%">姓名</th>
-                            <th style="width: 18%">用户名</th>
-                            <th style="width: 35%;">上次登陆时间</th>
-                            <th style="width: 15%">操作</th>
-                        </tr>
-                        <% if(isEmpty(page.list)){ %>
-                        <tr>
-                            <td colspan="6">没有学生</td>
-                        </tr>
-                        <% } %>
-                        <% for( admin in page.list){ %>
-                        <tr class="rowDetail" rel="${admin.id}">
-                            <td>${adminLP.index}</td>
-                            <td hidden="hidden">${admin.id}</td>
-                            <td>${admin.name}</td>
-                            <td>${admin.number}</td>
-                            <td>
-                                ${admin.lastLoginTime,dateFormat="yyyy-MM-dd HH:mm:ss"}
-                            </td>
-                            <td>
-                                <button class="btn btn-danger btn-sm" onclick="deleteAdmin(${admin.id})"><i
-                                        class="fa"></i>删除
-                                </button>
-                            </td>
-                        </tr>
-                        <% } %>
-                        </tbody>
-                    </table>
-                </div>
             </div>
-            <ul id="pagination-demo" class="pagination-sm pull-right"></ul>
+        </section>
+
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">管理员列表</h3>
+                                <div class="card-tools">
+                                    <div class="input-group input-group-sm">
+                                        <button class="btn btn-success btn-sm" onclick="goSave()"><i class="fa fa-plus"></i> 新增管理员</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body table-responsive p-0">
+                                <table class="table table-bordered table-striped table-head-fixed text-nowrap">
+                                    <tbody>
+                                    <tr>
+                                        <th style="width: 15%">序号</th>
+                                        <th style="width: 17%">姓名</th>
+                                        <th style="width: 18%">用户名</th>
+                                        <th style="width: 35%;">上次登陆时间</th>
+                                        <th style="width: 15%">操作</th>
+                                    </tr>
+                                    <% if(isEmpty(page.list)){ %>
+                                    <tr>
+                                        <td colspan="6">没有学生</td>
+                                    </tr>
+                                    <% } %>
+                                    <% for( admin in page.list){ %>
+                                    <tr class="rowDetail" rel="${admin.id}">
+                                        <td>${adminLP.index}</td>
+                                        <td hidden="hidden">${admin.id}</td>
+                                        <td>${admin.name}</td>
+                                        <td>${admin.number}</td>
+                                        <td>
+                                            ${admin.lastLoginTime,dateFormat="yyyy-MM-dd HH:mm:ss"}
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-danger btn-sm" onclick="deleteAdmin(${admin.id})"><i
+                                                    class="fa"></i>删除
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="card-footer clearfix">
+                                <ul class="pagination m-0 float-right">
+                                    <%for(var i=1;i<=page.pages;i++){ %>
+                                    <% if(page.pageNum == i){ %>
+                                    <li class="page-item active">
+                                        <a class="page-link" href="?p=${i}">${i}</a>
+                                    </li>
+                                    <%}else{%>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?p=${i}">${i}</a>
+                                    </li>
+                                    <%}%>
+                                    <% }%>
+                                </ul>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                </div>
+            </div><!-- /.row -->
         </section>
     </div>
+
     <!-- 增加模态框 -->
     <%include("save-modal.html"){} %>
     <!-- 引入footer -->
     <% include("../../include/footer.html"){} %>
 </div><!-- 引入全局 js 脚本文件 -->
 <% include("../../include/js.html"){} %>
-<script src="/static/plugins/jquery-pagination/jquery.twbsPagination.min.js"></script>
+<!-- 自定義工具 -->
+<script src="/static/js/OesUtil.js"></script>
 <!-- 接口 -->
 <% include("api.html"){} %>
 </body>
