--- a/oes-core/src/main/resources/templates/admin/include/header.html
+++ b/oes-core/src/main/resources/templates/admin/include/header.html
@@ -1,44 +1,50 @@
-<header class="main-header">
-    <a href="#" class="logo">
-        <span class="logo-mini"><b>A</b>LT</span>
-        <span class="logo-lg"><b>OES</b> - Admin</span>
-    </a>
-    <nav class="navbar navbar-static-top">
-        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </a>
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="/webjars/adminlte/2.3.11/dist/img/avatar5.png" class="user-image"
-                             alt="User Image">
-                        <span class="hidden-xs">${session.admin.name}</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="user-header">
-                            <img src="/webjars/adminlte/2.3.11/dist/img/avatar5.png" class="img-circle"
-                                 alt="User Image">
-                            <p>
-                                ${session.admin.name}
-                                <small>${session.admin.lastLoginTime}</small>
-                            </p>
-                        </li>
-                        <li class="user-footer">
-                            <div class="pull-left">
-                                <a href="/admin/${session.admin.id}/changePass"
-                                   class="btn btn-default btn-flat">个人设置</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="/admin/logout" class="btn btn-default btn-flat">完全退出</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
+<nav class="main-header navbar navbar-expand border-bottom navbar-dark bg-olive">
+    <!-- Left navbar links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a href="/admin/home/${session.admin.id}" class="nav-link">首页</a>
+        </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <!-- User Account: style can be found in dropdown.less -->
+        <li class="nav-item dropdown">
+            <a class="nav-link" data-toggle="dropdown" href="#">
+                <i class="fa fa-gear"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
+                <!-- Message Start -->
+                <div class="text-body">
+                    <div class="text-center">
+                            <span class="dropdown-item-title">
+                                管理员：${session.admin.name}
+                            </span>
+                    </div>
+                </div>
+                <!-- Message End -->
+                <div class="dropdown-divider"></div>
+                <a href="/admin/update/pass" class="dropdown-item">
+                    <!-- Message Start -->
+                    <div class="media">
+                        <div class="media-body text-center">
+                            个人设置
+                        </div>
+                    </div>
+                    <!-- Message End -->
+                </a>
+                <a href="/admin/logout" class="dropdown-item">
+                    <!-- Message Start -->
+                    <div class="media">
+                        <div class="media-body text-center">
+                            安全退出
+                        </div>
+                    </div>
+                    <!-- Message End -->
+                </a>
+            </div>
+        </li>
+    </ul>
+</nav>
