--- a/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
@@ -3,10 +3,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">增加教师信息</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">增加教师信息</h4>
             </div>
             <form class="save-form">
                 <div class="modal-body">
@@ -42,7 +42,7 @@
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="saveBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="saveTeacher()">确定</button>
             </div>
         </div>
     </div>
